# kyupad-contract

./: .env  .env.example  .gitignore  Anchor.toml  Makefile  README.md  id.json  package-lock.json  package.json  test.csv  test.json  tsconfig.json
candy-machine-sugar/: .env.template  .gitignore  README.md  creator.json  id.json  index.ts  owner.json  package-lock.json  package.json  tsconfig.json
candy-machine-sugar/assets/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  collection.json
candy-machine-sugar/cache/: jup.json  madlads.json  smb.json  wen.json
cpi/mpl-bubblegum/: Cargo.toml  idl.json
cpi/mpl-bubblegum/src/: lib.rs
migrations/: deploy.js  deploy.js.map
mint-nft-metaplex/: Anchor.toml  id.json
mint-nft-solana/: Anchor.toml
programs/kyupad-ido/: Cargo.toml
programs/kyupad-ido/src/: errors.rs  lib.rs  utils.rs
programs/kyupad-ido/src/instructions/: add_private_allocate.rs  admin.rs  invest.rs  invest_private.rs  master.rs  mod.rs  refund.rs  register_project.rs  update_config_project.rs
programs/kyupad-ido/src/state/: investor_counter.rs  mod.rs  project_config.rs  project_counter.rs
programs/kyupad-smart-contract/: Cargo.toml
programs/kyupad-smart-contract/src/: errors.rs  lib.rs  pda.rs  utils.rs
programs/kyupad-smart-contract/src/instructions/: add_pool_config.rs  airdrop.rs  create_collection.rs  create_colllection.rs  create_tree_config.rs  init_admin.rs  init_collection_config.rs  mint_cnft.rs  mod.rs  update_pool_config.rs
programs/kyupad-smart-contract/src/instructions/c_nft/: add_pool_config.rs  create_tree_config.rs  init_collection_config.rs  mint_cnft.rs  mod.rs  update_merkle_root.rs  update_pool_config.rs
programs/kyupad-smart-contract/src/instructions/ido/: invest.rs  mod.rs  register_project.rs
programs/kyupad-smart-contract/src/state/: metaplex_adapter.rs  mint_counter.rs  mod.rs  pool_config.rs  project_config.rs
programs/kyupad-smart-contract/src/state/c_nft/: mod.rs
programs/kyupad-smart-contract/src/state/ido/: mod.rs  project_config.rs  project_counter.rs
scripts/: map-programid-from-env.sh  map-programid-to-env.sh  map-programid-to-idl.sh  programs.map
snapshot/: .gitignore  index.ts  package-lock.json  package.json
tests/: getFunction.ts  ido.js  ido.js.map  ido.ts  index.ts  kyupad-smart-contract.ts  mint-cNFT.ts  mintNFT.js  mintNFT.js.map  mintNFT.ts  test.js  test.js.map  utils.js  utils.js.map  utils.ts  vesting.js  vesting.js.map  vesting.ts
(+14 files in other folders)
