[package]
name = "kyupad-ido"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyupad_ido"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ['init-if-needed']}
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
dotenv_codegen = "0.15.0"
const_str_to_pubkey = "0.1.1"
anchor-spl = {version = "0.29.0", features = ["metadata"]}

