[package]
name = "kyupad-smart-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyupad_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ['init-if-needed']}
mpl-candy-guard = {path="../../cpi/mpl-candy-guard", features = ['cpi']}
mpl-bubblegum = {path="../../cpi/mpl-bubblegum", features = ['cpi']}
spl-account-compression = {version="0.3.0", features = ['cpi']}
mpl-token-metadata = "4.1.2"
mpl-utils = "0.3.2"
